fix: windows x64 notebook (#821)
* fix: remove mlx from windows notebook

* fix: add mmproj path to the VLM example in windows x64 notebook

--- a/bindings/python/notebook/windows(x64).ipynb
+++ b/bindings/python/notebook/windows(x64).ipynb
@@ -62,7 +62,7 @@
         "### 3. Install the NexaAI SDK\n",
         "\n",
         "```bash\n",
-        "pip install 'nexaai[mlx]'\n",
+        "pip install 'nexaai'\n",
         "```\n",
         "\n",
         "---\n",
@@ -213,6 +213,7 @@
         "    # Model configuration\n",
         "\n",
         "    model_name = \"ggml-org/gemma-3-4b-it-GGUF/gemma-3-4b-it-Q4_K_M.gguf\"\n",
+        "    mmproj_path = \"ggml-org/gemma-3-4b-it-GGUF/mmproj-model-f16.gguf\"\n",
         "\n",
         "    plugin_id = \"cpu_gpu\"\n",
         "    max_tokens = 100\n",
@@ -229,7 +230,7 @@
         "\n",
         "    # Create model instance\n",
         "    m_cfg = ModelConfig()\n",
-        "    vlm = VLM.from_(name_or_path=model_name, m_cfg=m_cfg, plugin_id=plugin_id)\n",
+        "    vlm = VLM.from_(name_or_path=model_name, mmproj_path=mmproj_path, m_cfg=m_cfg, plugin_id=plugin_id)\n",
         "\n",
         "    # Create conversation history\n",
         "    conversation = [MultiModalMessage(role=\"system\",\n",
@@ -301,119 +302,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "=== Embedder Inference Example ===\n",
-            "Loading model: djuna/jina-embeddings-v2-small-en-Q5_K_M-GGUF/jina-embeddings-v2-small-en-q5_k_m.gguf\n",
-            "Using plugin: cpu_gpu\n",
-            "Batch size: 2\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "f:\\workspace\\company\\nexaai\\nexa-sdk\\.venv\\lib\\site-packages\\huggingface_hub\\file_download.py:979: UserWarning: `local_dir_use_symlinks` parameter is deprecated and will be ignored. The process to download files to a local folder has been updated and do not rely on symlinks anymore. You only need to pass a destination folder as`local_dir`.\n",
-            "For more details, check out https://huggingface.co/docs/huggingface_hub/main/en/guides/download#download-files-to-local-folder.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[INFO] Attempting to download nexa.manifest from djuna/jina-embeddings-v2-small-en-Q5_K_M-GGUF...\n",
-            "[INFO] nexa.manifest not found in djuna/jina-embeddings-v2-small-en-Q5_K_M-GGUF, will create locally\n",
-            "[OK] Successfully created nexa.manifest for djuna/jina-embeddings-v2-small-en-Q5_K_M-GGUF\n",
-            "Embedder loaded successfully!\n",
-            "Embedding dimension: 512\n",
-            "\n",
-            "=== Generating Embeddings ===\n",
-            "Processing 5 texts...\n",
-            "Successfully generated 5 embeddings\n",
-            "\n",
-            "=== Embedding Details ===\n",
-            "\n",
-            "Text 1:\n",
-            "  Content: On-device AI is a type of AI that is processed on the device itself, rather than in the cloud.\n",
-            "  Embedding dimension: 512\n",
-            "  First 10 elements: [-0.04828435 -0.06880371 -0.00595966 -0.00048472  0.01435765 -0.02124726\n",
-            "  0.04017022  0.06111896  0.00422432  0.00086029]\n",
-            "----------------------------------------------------------------------\n",
-            "\n",
-            "Text 2:\n",
-            "  Content: Nexa AI allows you to run state-of-the-art AI models locally on CPU, GPU, or NPU.\n",
-            "  Embedding dimension: 512\n",
-            "  First 10 elements: [-0.03423774 -0.06670449  0.0073319   0.0253497  -0.02921125 -0.01526904\n",
-            "  0.03073953  0.06452441 -0.01268294  0.04022756]\n",
-            "----------------------------------------------------------------------\n",
-            "\n",
-            "Text 3:\n",
-            "  Content: A ragdoll is a breed of cat that is known for its long, flowing hair and gentle personality.\n",
-            "  Embedding dimension: 512\n",
-            "  First 10 elements: [-0.02059605 -0.03419322 -0.02397553  0.05312475  0.01025576  0.0115067\n",
-            " -0.01412297  0.06845784 -0.04020507  0.00317529]\n",
-            "----------------------------------------------------------------------\n",
-            "\n",
-            "Text 4:\n",
-            "  Content: The capital of France is Paris.\n",
-            "  Embedding dimension: 512\n",
-            "  First 10 elements: [-0.06762518 -0.04266268  0.01120668  0.02044768 -0.00836239 -0.00759394\n",
-            "  0.01564865  0.06303822 -0.04065036  0.0352169 ]\n",
-            "----------------------------------------------------------------------\n",
-            "\n",
-            "Text 5:\n",
-            "  Content: NPU acceleration provides significant performance improvements for AI workloads.\n",
-            "  Embedding dimension: 512\n",
-            "  First 10 elements: [-0.02779846 -0.03865884  0.00125065  0.04632435 -0.00093052 -0.01247025\n",
-            "  0.00277293  0.07364899  0.01103177  0.03270822]\n",
-            "----------------------------------------------------------------------\n",
-            "\n",
-            "=== Query Processing ===\n",
-            "Query: 'what is on device AI'\n",
-            "Query embedding dimension: 512\n",
-            "\n",
-            "=== Similarity Analysis (Inner Product) ===\n",
-            "\n",
-            "Text 1:\n",
-            "  Content: On-device AI is a type of AI that is processed on the device itself, rather than in the cloud.\n",
-            "  Inner product with query: 0.939030\n",
-            "----------------------------------------------------------------------\n",
-            "\n",
-            "Text 2:\n",
-            "  Content: Nexa AI allows you to run state-of-the-art AI models locally on CPU, GPU, or NPU.\n",
-            "  Inner product with query: 0.819101\n",
-            "----------------------------------------------------------------------\n",
-            "\n",
-            "Text 3:\n",
-            "  Content: A ragdoll is a breed of cat that is known for its long, flowing hair and gentle personality.\n",
-            "  Inner product with query: 0.638035\n",
-            "----------------------------------------------------------------------\n",
-            "\n",
-            "Text 4:\n",
-            "  Content: The capital of France is Paris.\n",
-            "  Inner product with query: 0.628324\n",
-            "----------------------------------------------------------------------\n",
-            "\n",
-            "Text 5:\n",
-            "  Content: NPU acceleration provides significant performance improvements for AI workloads.\n",
-            "  Inner product with query: 0.769383\n",
-            "----------------------------------------------------------------------\n",
-            "\n",
-            "=== Similarity Ranking Results ===\n",
-            "Rank 1: [0.939030] On-device AI is a type of AI that is processed on the device itself, rather than in the cloud.\n",
-            "Rank 2: [0.819101] Nexa AI allows you to run state-of-the-art AI models locally on CPU, GPU, or NPU.\n",
-            "Rank 3: [0.769383] NPU acceleration provides significant performance improvements for AI workloads.\n",
-            "Rank 4: [0.638035] A ragdoll is a breed of cat that is known for its long, flowing hair and gentle personality.\n",
-            "Rank 5: [0.628324] The capital of France is Paris.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "from nexaai.embedder import Embedder, EmbeddingConfig\n",
@@ -526,40 +417,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "=== Reranker Inference Example ===\n",
-            "Loading model: pqnet/bge-reranker-v2-m3-Q8_0-GGUF/a\n",
-            "Using plugin: cpu_gpu\n",
-            "Batch size: 4\n"
-          ]
-        },
-        {
-          "ename": "RuntimeError",
-          "evalue": "Could not load model from 'name_or_path=pqnet/bge-reranker-v2-m3-Q8_0-GGUF/a': File 'a' not found in repository 'pqnet/bge-reranker-v2-m3-Q8_0-GGUF'. Available files: ['.gitattributes', 'README.md', 'bge-reranker-v2-m3-q8_0.gguf']",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "File \u001b[1;32mf:\\workspace\\company\\nexaai\\nexa-sdk\\.venv\\lib\\site-packages\\nexaai\\utils\\model_manager.py:1437\u001b[0m, in \u001b[0;36m_download_model_if_needed\u001b[1;34m(model_path, param_name, progress_callback, token, is_mmproj, **kwargs)\u001b[0m\n\u001b[0;32m   1436\u001b[0m \u001b[38;5;66;03m# Download the model\u001b[39;00m\n\u001b[1;32m-> 1437\u001b[0m downloaded_path \u001b[38;5;241m=\u001b[39m download_from_huggingface(\n\u001b[0;32m   1438\u001b[0m     repo_id\u001b[38;5;241m=\u001b[39mrepo_id,\n\u001b[0;32m   1439\u001b[0m     file_name\u001b[38;5;241m=\u001b[39mfile_name,\n\u001b[0;32m   1440\u001b[0m     local_dir\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,  \u001b[38;5;66;03m# Use default cache directory\u001b[39;00m\n\u001b[0;32m   1441\u001b[0m     enable_transfer\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m   1442\u001b[0m     progress_callback\u001b[38;5;241m=\u001b[39mprogress_callback,\n\u001b[0;32m   1443\u001b[0m     show_progress\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m   1444\u001b[0m     token\u001b[38;5;241m=\u001b[39mtoken,\n\u001b[0;32m   1445\u001b[0m     is_mmproj\u001b[38;5;241m=\u001b[39mis_mmproj,\n\u001b[0;32m   1446\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs\n\u001b[0;32m   1447\u001b[0m )\n\u001b[0;32m   1449\u001b[0m \u001b[38;5;66;03m# Extract model info from the downloaded manifest\u001b[39;00m\n",
-            "File \u001b[1;32mf:\\workspace\\company\\nexaai\\nexa-sdk\\.venv\\lib\\site-packages\\nexaai\\utils\\model_manager.py:1323\u001b[0m, in \u001b[0;36mdownload_from_huggingface\u001b[1;34m(repo_id, file_name, local_dir, enable_transfer, progress_callback, show_progress, token, custom_endpoint, force_download, is_mmproj, **kwargs)\u001b[0m\n\u001b[0;32m   1322\u001b[0m \u001b[38;5;66;03m# Use the downloader to perform the download\u001b[39;00m\n\u001b[1;32m-> 1323\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m downloader\u001b[38;5;241m.\u001b[39mdownload(\n\u001b[0;32m   1324\u001b[0m     repo_id\u001b[38;5;241m=\u001b[39mrepo_id,\n\u001b[0;32m   1325\u001b[0m     file_name\u001b[38;5;241m=\u001b[39mfile_name,\n\u001b[0;32m   1326\u001b[0m     local_dir\u001b[38;5;241m=\u001b[39mlocal_dir,\n\u001b[0;32m   1327\u001b[0m     progress_callback\u001b[38;5;241m=\u001b[39mprogress_callback,\n\u001b[0;32m   1328\u001b[0m     show_progress\u001b[38;5;241m=\u001b[39mshow_progress,\n\u001b[0;32m   1329\u001b[0m     force_download\u001b[38;5;241m=\u001b[39mforce_download,\n\u001b[0;32m   1330\u001b[0m     is_mmproj\u001b[38;5;241m=\u001b[39mis_mmproj,\n\u001b[0;32m   1331\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs\n\u001b[0;32m   1332\u001b[0m )\n",
-            "File \u001b[1;32mf:\\workspace\\company\\nexaai\\nexa-sdk\\.venv\\lib\\site-packages\\nexaai\\utils\\model_manager.py:1192\u001b[0m, in \u001b[0;36mHuggingFaceDownloader.download\u001b[1;34m(self, repo_id, file_name, local_dir, progress_callback, show_progress, force_download, is_mmproj, **kwargs)\u001b[0m\n\u001b[0;32m   1190\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(file_name, \u001b[38;5;28mstr\u001b[39m):\n\u001b[0;32m   1191\u001b[0m     \u001b[38;5;66;03m# Download specific single file\u001b[39;00m\n\u001b[1;32m-> 1192\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_validate_file_exists_in_repo\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minfo\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrepo_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprogress_tracker\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1193\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_download_single_file(\n\u001b[0;32m   1194\u001b[0m         repo_id, file_name, local_dir, progress_tracker, force_download, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs\n\u001b[0;32m   1195\u001b[0m     )\n",
-            "File \u001b[1;32mf:\\workspace\\company\\nexaai\\nexa-sdk\\.venv\\lib\\site-packages\\nexaai\\utils\\model_manager.py:807\u001b[0m, in \u001b[0;36mHuggingFaceDownloader._validate_file_exists_in_repo\u001b[1;34m(self, file_name, info, repo_id, progress_tracker)\u001b[0m\n\u001b[0;32m    806\u001b[0m     progress_tracker\u001b[38;5;241m.\u001b[39mstop_tracking()\n\u001b[1;32m--> 807\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(error_msg)\n",
-            "\u001b[1;31mValueError\u001b[0m: File 'a' not found in repository 'pqnet/bge-reranker-v2-m3-Q8_0-GGUF'. Available files: ['.gitattributes', 'README.md', 'bge-reranker-v2-m3-q8_0.gguf']",
-            "\nDuring handling of the above exception, another exception occurred:\n",
-            "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[3], line 78\u001b[0m\n\u001b[0;32m     73\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m=\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m80\u001b[39m)\n\u001b[0;32m     75\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m reranker\n\u001b[1;32m---> 78\u001b[0m reranker \u001b[38;5;241m=\u001b[39m \u001b[43mreranker_example\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-            "Cell \u001b[1;32mIn[3], line 21\u001b[0m, in \u001b[0;36mreranker_example\u001b[1;34m()\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBatch size: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbatch_size\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# Create reranker instance\u001b[39;00m\n\u001b[1;32m---> 21\u001b[0m reranker \u001b[38;5;241m=\u001b[39m \u001b[43mReranker\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname_or_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mplugin_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mplugin_id\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mReranker loaded successfully!\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     24\u001b[0m \u001b[38;5;66;03m# Example queries and documents\u001b[39;00m\n",
-            "File \u001b[1;32mf:\\workspace\\company\\nexaai\\nexa-sdk\\.venv\\lib\\site-packages\\nexaai\\utils\\model_manager.py:1546\u001b[0m, in \u001b[0;36mauto_download_model.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m   1543\u001b[0m             kwargs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodel_name\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m model_name\n\u001b[0;32m   1545\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m-> 1546\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m e  \u001b[38;5;66;03m# Re-raise the error from _download_model_if_needed\u001b[39;00m\n\u001b[0;32m   1548\u001b[0m \u001b[38;5;66;03m# Download mmproj_path if needed\u001b[39;00m\n\u001b[0;32m   1549\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m mmproj_path \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-            "File \u001b[1;32mf:\\workspace\\company\\nexaai\\nexa-sdk\\.venv\\lib\\site-packages\\nexaai\\utils\\model_manager.py:1529\u001b[0m, in \u001b[0;36mauto_download_model.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m   1527\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name_or_path \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m   1528\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 1529\u001b[0m         downloaded_name_path, model_name, plugin_id \u001b[38;5;241m=\u001b[39m _download_model_if_needed(\n\u001b[0;32m   1530\u001b[0m             name_or_path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname_or_path\u001b[39m\u001b[38;5;124m'\u001b[39m, progress_callback, token, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs\n\u001b[0;32m   1531\u001b[0m         )\n\u001b[0;32m   1533\u001b[0m         \u001b[38;5;66;03m# Replace name_or_path with downloaded path\u001b[39;00m\n\u001b[0;32m   1534\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m is_name_positional:\n",
-            "File \u001b[1;32mf:\\workspace\\company\\nexaai\\nexa-sdk\\.venv\\lib\\site-packages\\nexaai\\utils\\model_manager.py:1462\u001b[0m, in \u001b[0;36m_download_model_if_needed\u001b[1;34m(model_path, param_name, progress_callback, token, is_mmproj, **kwargs)\u001b[0m\n\u001b[0;32m   1458\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m downloaded_path, model_name, plugin_id\n\u001b[0;32m   1460\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m   1461\u001b[0m     \u001b[38;5;66;03m# Only handle download-related errors\u001b[39;00m\n\u001b[1;32m-> 1462\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCould not load model from \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mparam_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-            "\u001b[1;31mRuntimeError\u001b[0m: Could not load model from 'name_or_path=pqnet/bge-reranker-v2-m3-Q8_0-GGUF/a': File 'a' not found in repository 'pqnet/bge-reranker-v2-m3-Q8_0-GGUF'. Available files: ['.gitattributes', 'README.md', 'bge-reranker-v2-m3-q8_0.gguf']"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from nexaai.rerank import Reranker, RerankConfig\n",
         "\n",
@@ -644,7 +502,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": "sdk",
       "language": "python",
       "name": "python3"
     },
@@ -658,7 +516,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.11"
+      "version": "3.10.19"
     }
   },
   "nbformat": 4,
