feat: add example for npu diarization

--- a/bindings/python/notebook/winodws(arm64).ipynb
+++ b/bindings/python/notebook/winodws(arm64).ipynb
@@ -719,6 +719,63 @@
         "\n",
         "cv_ocr_example()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 6. Speech Diarization NPU Inference\n",
+        "\n",
+        "Run NPU-accelerated speech diarization tasks on audio files."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "from nexaai.diarize import Diarize, DiarizeConfig\n",
+        "from nexaai.common import ModelConfig\n",
+        "\n",
+        "\n",
+        "def diarize_example():\n",
+        "\n",
+        "    # Use huggingface repo ID\n",
+        "    model_name = \"NexaAI/Pyannote-NPU\"\n",
+        "\n",
+        "    audio_path = r\"path/to/audio\"\n",
+        "\n",
+        "    m_cfg = ModelConfig()\n",
+        "    m_cfg.verbose = False\n",
+        "\n",
+        "    diarize = Diarize.from_(\n",
+        "        name_or_path=model_name,\n",
+        "        model_name=\"pyannote\",\n",
+        "        m_cfg=m_cfg,\n",
+        "        plugin_id=\"npu\",\n",
+        "        device_id=None,\n",
+        "    )\n",
+        "\n",
+        "    assert os.path.exists(audio_path), f\"ERROR: Image file not found: {audio_path}\"\n",
+        "\n",
+        "    cfg = DiarizeConfig(\n",
+        "        min_speakers=0,  # Auto-detect\n",
+        "        max_speakers=0,  # No limit\n",
+        "    )\n",
+        "\n",
+        "    result = diarize.infer(audio_path, config=cfg)\n",
+        "\n",
+        "    # Print diarization results\n",
+        "    for segment in result.segments:\n",
+        "        print(\n",
+        "            f\"[{segment.start_time:.2f}s - {segment.end_time:.2f}s] {segment.speaker_label}\"\n",
+        "        )\n",
+        "\n",
+        "\n",
+        "diarize_example()\n"
+      ]
     }
   ],
   "metadata": {
