refactor(bindings): update notebook examples to use new API conventions and improve error handling

--- a/bindings/python/notebook/windows(x64).ipynb
+++ b/bindings/python/notebook/windows(x64).ipynb
@@ -121,8 +121,7 @@
         "import io\n",
         "import os\n",
         "\n",
-        "from nexaai.common import GenerationConfig, ModelConfig, ChatMessage\n",
-        "from nexaai.llm import LLM\n",
+        "from nexaai import LLM, GenerationConfig, ModelConfig, LlmChatMessage\n",
         "\n",
         "\n",
         "def llm_example():\n",
@@ -140,11 +139,11 @@
         "    print(f\"Loading model: {model_name}\")\n",
         "\n",
         "    # Create model instance\n",
-        "    m_cfg = ModelConfig()\n",
-        "    llm = LLM.from_(name_or_path=model_name, m_cfg=m_cfg, plugin_id=plugin_id)\n",
+        "    config = ModelConfig()\n",
+        "    llm = LLM.from_(model=model_name, plugin_id=plugin_id, config=config)\n",
         "\n",
         "    # Create conversation history\n",
-        "    conversation = [ChatMessage(role=\"system\", content=system_message)]\n",
+        "    conversation = [LlmChatMessage(role=\"system\", content=system_message)]\n",
         "\n",
         "    # Example conversations\n",
         "    test_prompts = [\n",
@@ -158,7 +157,7 @@
         "        print(f\"User: {prompt}\")\n",
         "\n",
         "        # Add user message\n",
-        "        conversation.append(ChatMessage(role=\"user\", content=prompt))\n",
+        "        conversation.append(LlmChatMessage(role=\"user\", content=prompt))\n",
         "\n",
         "        # Apply chat template\n",
         "        formatted_prompt = llm.apply_chat_template(conversation)\n",
@@ -167,17 +166,22 @@
         "        print(\"Assistant: \", end=\"\", flush=True)\n",
         "        response_buffer = io.StringIO()\n",
         "\n",
-        "        for token in llm.generate_stream(formatted_prompt, g_cfg=GenerationConfig(max_tokens=max_tokens)):\n",
-        "            print(token, end=\"\", flush=True)\n",
-        "            response_buffer.write(token)\n",
+        "        gen = llm.generate_stream(formatted_prompt, GenerationConfig(max_tokens=max_tokens))\n",
+        "        result = None\n",
+        "        try:\n",
+        "            while True:\n",
+        "                token = next(gen)\n",
+        "                print(token, end=\"\", flush=True)\n",
+        "                response_buffer.write(token)\n",
+        "        except StopIteration as e:\n",
+        "            result = e.value\n",
         "\n",
         "        # Get profiling data\n",
-        "        profiling_data = llm.get_profiling_data()\n",
-        "        if profiling_data:\n",
-        "            print(f\"\\nProfiling data: {profiling_data}\")\n",
+        "        if result and hasattr(result, \"profile_data\") and result.profile_data:\n",
+        "            print(f\"\\n{result.profile_data}\")\n",
         "\n",
         "        # Add assistant response to conversation history\n",
-        "        conversation.append(ChatMessage(role=\"assistant\", content=response_buffer.getvalue()))\n",
+        "        conversation.append(LlmChatMessage(role=\"assistant\", content=response_buffer.getvalue()))\n",
         "        print(\"\\n\" + \"=\" * 50)\n",
         "\n",
         "\n",
@@ -202,8 +206,13 @@
         "import os\n",
         "import io\n",
         "\n",
+        "from nexaai import (\n",
+        "    GenerationConfig,\n",
+        "    ModelConfig,\n",
+        "    VlmChatMessage,\n",
+        "    VlmContent,\n",
+        ")\n",
         "from nexaai.vlm import VLM\n",
-        "from nexaai.common import GenerationConfig, ModelConfig, MultiModalMessage, MultiModalMessageContent\n",
         "\n",
         "\n",
         "def vlm_example():\n",
@@ -229,12 +238,16 @@
         "            f\"\\033[93mWARNING: The specified image_path ('{image_path}') does not exist or was not provided. Multimodal prompts will not include image input.\\033[0m\")\n",
         "\n",
         "    # Create model instance\n",
-        "    m_cfg = ModelConfig()\n",
-        "    vlm = VLM.from_(name_or_path=model_name, mmproj_path=mmproj_path, m_cfg=m_cfg, plugin_id=plugin_id)\n",
+        "    config = ModelConfig()\n",
+        "    vlm = VLM.from_(model=model_name, mmproj_path=mmproj_path, config=config, plugin_id=plugin_id)\n",
         "\n",
         "    # Create conversation history\n",
-        "    conversation = [MultiModalMessage(role=\"system\",\n",
-        "                                      content=[MultiModalMessageContent(type=\"text\", text=system_message)])]\n",
+        "    conversation = [\n",
+        "        VlmChatMessage(\n",
+        "            role=\"system\",\n",
+        "            contents=[VlmContent(type=\"text\", text=system_message)]\n",
+        "        )\n",
+        "    ]\n",
         "\n",
         "    # Example multimodal conversations\n",
         "    test_cases = [\n",
@@ -249,15 +262,17 @@
         "        print(f\"User: {case['text']}\")\n",
         "\n",
         "        # Build message content\n",
-        "        contents = [MultiModalMessageContent(type=\"text\", text=case['text'])]\n",
+        "        contents = []\n",
+        "        if case['text']:\n",
+        "            contents.append(VlmContent(type=\"text\", text=case['text']))\n",
         "\n",
         "        # Add image content if available\n",
         "        if case['image_path'] and os.path.exists(case['image_path']):\n",
-        "            contents.append(MultiModalMessageContent(type=\"image\", path=case['image_path']))\n",
+        "            contents.append(VlmContent(type=\"image\", text=case['image_path']))\n",
         "            print(f\"Including image: {case['image_path']}\")\n",
         "\n",
         "        # Add user message\n",
-        "        conversation.append(MultiModalMessage(role=\"user\", content=contents))\n",
+        "        conversation.append(VlmChatMessage(role=\"user\", contents=contents))\n",
         "\n",
         "        # Apply chat template\n",
         "        formatted_prompt = vlm.apply_chat_template(conversation)\n",
@@ -270,21 +285,36 @@
         "        image_paths = [case['image_path']] if case['image_path'] and os.path.exists(case['image_path']) else None\n",
         "        audio_paths = None\n",
         "\n",
-        "        for token in vlm.generate_stream(formatted_prompt,\n",
-        "                                         g_cfg=GenerationConfig(max_tokens=max_tokens,\n",
-        "                                                                image_paths=image_paths,\n",
-        "                                                                audio_paths=audio_paths)):\n",
-        "            print(token, end=\"\", flush=True)\n",
-        "            response_buffer.write(token)\n",
+        "        gen = vlm.generate_stream(\n",
+        "            formatted_prompt,\n",
+        "            config=GenerationConfig(\n",
+        "                max_tokens=max_tokens,\n",
+        "                image_paths=image_paths,\n",
+        "                audio_paths=audio_paths\n",
+        "            )\n",
+        "        )\n",
+        "        result = None\n",
+        "        try:\n",
+        "            while True:\n",
+        "                token = next(gen)\n",
+        "                print(token, end=\"\", flush=True)\n",
+        "                response_buffer.write(token)\n",
+        "        except StopIteration as e:\n",
+        "            result = e.value\n",
         "\n",
         "        # Get profiling data\n",
-        "        profiling_data = vlm.get_profiling_data()\n",
-        "        if profiling_data:\n",
-        "            print(f\"\\nProfiling data: {profiling_data}\")\n",
+        "        if result and hasattr(result, \"profile_data\") and result.profile_data:\n",
+        "            print(f\"\\n{result.profile_data}\")\n",
         "\n",
         "        # Add assistant response to conversation history\n",
-        "        conversation.append(MultiModalMessage(role=\"assistant\",\n",
-        "                                              content=[MultiModalMessageContent(type=\"text\", text=response_buffer.getvalue())]))\n",
+        "        conversation.append(\n",
+        "            VlmChatMessage(\n",
+        "                role=\"assistant\",\n",
+        "                contents=[\n",
+        "                    VlmContent(type=\"text\", text=response_buffer.getvalue())\n",
+        "                ]\n",
+        "            )\n",
+        "        )\n",
         "        print(\"\\n\" + \"=\" * 50)\n",
         "\n",
         "\n",
@@ -307,9 +337,9 @@
       "outputs": [],
       "source": [
         "import numpy as np\n",
-        "from nexaai.embedder import Embedder, EmbeddingConfig\n",
+        "import os\n",
+        "from nexaai.embedding import Embedder\n",
         "\n",
-        "# Embedder Inference Example\n",
         "\n",
         "def embedder_example():\n",
         "    \"\"\"Embedder Inference example\"\"\"\n",
@@ -327,17 +357,17 @@
         "    print(f\"Batch size: {batch_size}\")\n",
         "\n",
         "    # Create embedder instance\n",
-        "    embedder = Embedder.from_(name_or_path=model_name, plugin_id=plugin_id)\n",
+        "    embedder = Embedder.from_(model=model_name, plugin_id=plugin_id)\n",
         "    print('Embedder loaded successfully!')\n",
         "\n",
         "    # Get embedding dimension\n",
-        "    dim = embedder.get_embedding_dim()\n",
-        "    print(f\"Embedding dimension: {dim}\")\n",
+        "    dim = embedder.embedding_dim()\n",
+        "    print(f\"Dimension: {dim}\")\n",
         "\n",
         "    # Example texts\n",
         "    texts = [\n",
         "        \"On-device AI is a type of AI that is processed on the device itself, rather than in the cloud.\",\n",
-        "        \"Nexa AI allows you to run state-of-the-art AI models locally on CPU, GPU, or NPU.\",\n",
+        "        \"Nexa AI allows you to run state-of-the-art AI models locally on CPU, GPU, or NPU — from instant use cases to production deployments.\",\n",
         "        \"A ragdoll is a breed of cat that is known for its long, flowing hair and gentle personality.\",\n",
         "        \"The capital of France is Paris.\",\n",
         "        \"NPU acceleration provides significant performance improvements for AI workloads.\"\n",
@@ -349,10 +379,11 @@
         "    print(f\"Processing {len(texts)} texts...\")\n",
         "\n",
         "    # Generate embeddings\n",
-        "    embeddings = embedder.generate(\n",
+        "    result = embedder.embed(\n",
         "        texts=texts,\n",
-        "        config=EmbeddingConfig(batch_size=batch_size)\n",
+        "        batch_size=batch_size,\n",
         "    )\n",
+        "    embeddings = result.embeddings\n",
         "\n",
         "    print(f\"Successfully generated {len(embeddings)} embeddings\")\n",
         "\n",
@@ -361,7 +392,7 @@
         "    for i, (text, embedding) in enumerate(zip(texts, embeddings)):\n",
         "        print(f\"\\nText {i + 1}:\")\n",
         "        print(f\"  Content: {text}\")\n",
-        "        print(f\"  Embedding dimension: {len(embedding)}\")\n",
+        "        print(f\"  Embedding shape: {len(embedding)} dimensions\")\n",
         "        print(f\"  First 10 elements: {embedding[:10]}\")\n",
         "        print(\"-\" * 70)\n",
         "\n",
@@ -369,21 +400,20 @@
         "    print(f\"\\n=== Query Processing ===\")\n",
         "    print(f\"Query: '{query}'\")\n",
         "\n",
-        "    query_embedding = embedder.generate(\n",
+        "    query_result = embedder.embed(\n",
         "        texts=[query],\n",
-        "        config=EmbeddingConfig(batch_size=1)\n",
-        "    )[0]\n",
+        "        batch_size=1,\n",
+        "    )\n",
+        "    query_embedding = query_result.embeddings[0]\n",
         "\n",
-        "    print(f\"Query embedding dimension: {len(query_embedding)}\")\n",
+        "    print(f\"Query embedding shape: {len(query_embedding)} dimensions\")\n",
         "\n",
         "    # Similarity analysis\n",
         "    print(f\"\\n=== Similarity Analysis (Inner Product) ===\")\n",
         "    similarities = []\n",
         "\n",
         "    for i, (text, embedding) in enumerate(zip(texts, embeddings)):\n",
-        "        query_vec = np.array(query_embedding)\n",
-        "        text_vec = np.array(embedding)\n",
-        "        inner_product = np.dot(query_vec, text_vec)\n",
+        "        inner_product = sum(a * b for a, b in zip(query_embedding, embedding))\n",
         "        similarities.append((i, text, inner_product))\n",
         "\n",
         "        print(f\"\\nText {i + 1}:\")\n",
@@ -419,7 +449,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from nexaai.rerank import Reranker, RerankConfig\n",
+        "import os\n",
+        "from nexaai.rerank import Reranker\n",
         "\n",
         "\n",
         "def reranker_example():\n",
@@ -439,8 +470,10 @@
         "    print(f\"Batch size: {batch_size}\")\n",
         "\n",
         "    # Create reranker instance\n",
-        "    reranker = Reranker.from_(name_or_path=model_name, plugin_id=plugin_id)\n",
-        "    print('Reranker loaded successfully!')\n",
+        "    reranker = Reranker.from_(\n",
+        "        model=os.path.expanduser(model_name),\n",
+        "        plugin_id=plugin_id,\n",
+        "    )\n",
         "\n",
         "    # Example queries and documents\n",
         "    queries = [\n",
@@ -471,11 +504,12 @@
         "        print(\"-\" * 50)\n",
         "\n",
         "        # Perform reranking\n",
-        "        scores = reranker.rerank(\n",
+        "        result = reranker.rerank(\n",
         "            query=query,\n",
         "            documents=documents,\n",
-        "            config=RerankConfig(batch_size=batch_size)\n",
+        "            batch_size=batch_size,\n",
         "        )\n",
+        "        scores = result.scores\n",
         "\n",
         "        # Create (document, score) pairs and sort\n",
         "        doc_scores = list(zip(documents, scores))\n",
