--- a/bindings/python/notebook/macos.ipynb
+++ b/bindings/python/notebook/macos.ipynb
@@ -129,8 +129,7 @@
         "import io\n",
         "import os\n",
         "\n",
-        "from nexaai.common import GenerationConfig, ModelConfig, ChatMessage\n",
-        "from nexaai.llm import LLM\n",
+        "from nexaai import LLM, GenerationConfig, ModelConfig, LlmChatMessage\n",
         "\n",
         "\n",
         "def llm_example():\n",
@@ -148,11 +147,11 @@
         "    print(f\"Loading model: {model_name}\")\n",
         "\n",
         "    # Create model instance\n",
-        "    m_cfg = ModelConfig()\n",
-        "    llm = LLM.from_(name_or_path=model_name, m_cfg=m_cfg, plugin_id=\"mlx\")\n",
+        "    config = ModelConfig()\n",
+        "    llm = LLM.from_(model=model_name, plugin_id=\"mlx\", config=config)\n",
         "\n",
         "    # Create conversation history\n",
-        "    conversation = [ChatMessage(role=\"system\", content=system_message)]\n",
+        "    conversation = [LlmChatMessage(role=\"system\", content=system_message)]\n",
         "\n",
         "    # Example conversations\n",
         "    test_prompts = [\n",
@@ -166,7 +165,7 @@
         "        print(f\"User: {prompt}\")\n",
         "\n",
         "        # Add user message\n",
-        "        conversation.append(ChatMessage(role=\"user\", content=prompt))\n",
+        "        conversation.append(LlmChatMessage(role=\"user\", content=prompt))\n",
         "\n",
         "        # Apply chat template\n",
         "        formatted_prompt = llm.apply_chat_template(conversation)\n",
@@ -175,17 +174,22 @@
         "        print(\"Assistant: \", end=\"\", flush=True)\n",
         "        response_buffer = io.StringIO()\n",
         "\n",
-        "        for token in llm.generate_stream(formatted_prompt, g_cfg=GenerationConfig(max_tokens=max_tokens)):\n",
-        "            print(token, end=\"\", flush=True)\n",
-        "            response_buffer.write(token)\n",
+        "        gen = llm.generate_stream(formatted_prompt, GenerationConfig(max_tokens=max_tokens))\n",
+        "        result = None\n",
+        "        try:\n",
+        "            while True:\n",
+        "                token = next(gen)\n",
+        "                print(token, end=\"\", flush=True)\n",
+        "                response_buffer.write(token)\n",
+        "        except StopIteration as e:\n",
+        "            result = e.value\n",
         "\n",
         "        # Get profiling data\n",
-        "        profiling_data = llm.get_profiling_data()\n",
-        "        if profiling_data:\n",
-        "            print(f\"\\nProfiling data: {profiling_data}\")\n",
+        "        if result and hasattr(result, \"profile_data\") and result.profile_data:\n",
+        "            print(f\"\\n{result.profile_data}\")\n",
         "\n",
         "        # Add assistant response to conversation history\n",
-        "        conversation.append(ChatMessage(role=\"assistant\", content=response_buffer.getvalue()))\n",
+        "        conversation.append(LlmChatMessage(role=\"assistant\", content=response_buffer.getvalue()))\n",
         "        print(\"\\n\" + \"=\" * 50)\n",
         "\n",
         "\n",
@@ -210,8 +214,13 @@
         "import os\n",
         "import io\n",
         "\n",
+        "from nexaai import (\n",
+        "    GenerationConfig,\n",
+        "    ModelConfig,\n",
+        "    VlmChatMessage,\n",
+        "    VlmContent,\n",
+        ")\n",
         "from nexaai.vlm import VLM\n",
-        "from nexaai.common import GenerationConfig, ModelConfig, MultiModalMessage, MultiModalMessageContent\n",
         "\n",
         "\n",
         "def vlm_example():\n",
@@ -238,12 +247,16 @@
         "            f\"\\033[93mWARNING: The specified image_path ('{image_path}') does not exist or was not provided. Multimodal prompts will not include image input.\\033[0m\")\n",
         "\n",
         "    # Create model instance\n",
-        "    m_cfg = ModelConfig()\n",
-        "    vlm = VLM.from_(name_or_path=model_name, m_cfg=m_cfg, plugin_id=plugin_id)\n",
+        "    config = ModelConfig()\n",
+        "    vlm = VLM.from_(model=model_name, config=config, plugin_id=plugin_id)\n",
         "\n",
         "    # Create conversation history\n",
-        "    conversation = [MultiModalMessage(role=\"system\",\n",
-        "                                      content=[MultiModalMessageContent(type=\"text\", text=system_message)])]\n",
+        "    conversation = [\n",
+        "        VlmChatMessage(\n",
+        "            role=\"system\",\n",
+        "            contents=[VlmContent(type=\"text\", text=system_message)]\n",
+        "        )\n",
+        "    ]\n",
         "\n",
         "    # Example multimodal conversations\n",
         "    test_cases = [\n",
@@ -258,15 +271,17 @@
         "        print(f\"User: {case['text']}\")\n",
         "\n",
         "        # Build message content\n",
-        "        contents = [MultiModalMessageContent(type=\"text\", text=case['text'])]\n",
+        "        contents = []\n",
+        "        if case['text']:\n",
+        "            contents.append(VlmContent(type=\"text\", text=case['text']))\n",
         "\n",
         "        # Add image content if available\n",
         "        if case['image_path'] and os.path.exists(case['image_path']):\n",
-        "            contents.append(MultiModalMessageContent(type=\"image\", path=case['image_path']))\n",
+        "            contents.append(VlmContent(type=\"image\", text=case['image_path']))\n",
         "            print(f\"Including image: {case['image_path']}\")\n",
         "\n",
         "        # Add user message\n",
-        "        conversation.append(MultiModalMessage(role=\"user\", content=contents))\n",
+        "        conversation.append(VlmChatMessage(role=\"user\", contents=contents))\n",
         "\n",
         "        # Apply chat template\n",
         "        formatted_prompt = vlm.apply_chat_template(conversation)\n",
@@ -279,21 +294,36 @@
         "        image_paths = [case['image_path']] if case['image_path'] and os.path.exists(case['image_path']) else None\n",
         "        audio_paths = None\n",
         "\n",
-        "        for token in vlm.generate_stream(formatted_prompt,\n",
-        "                                         g_cfg=GenerationConfig(max_tokens=max_tokens,\n",
-        "                                                                image_paths=image_paths,\n",
-        "                                                                audio_paths=audio_paths)):\n",
-        "            print(token, end=\"\", flush=True)\n",
-        "            response_buffer.write(token)\n",
+        "        gen = vlm.generate_stream(\n",
+        "            formatted_prompt,\n",
+        "            config=GenerationConfig(\n",
+        "                max_tokens=max_tokens,\n",
+        "                image_paths=image_paths,\n",
+        "                audio_paths=audio_paths\n",
+        "            )\n",
+        "        )\n",
+        "        result = None\n",
+        "        try:\n",
+        "            while True:\n",
+        "                token = next(gen)\n",
+        "                print(token, end=\"\", flush=True)\n",
+        "                response_buffer.write(token)\n",
+        "        except StopIteration as e:\n",
+        "            result = e.value\n",
         "\n",
         "        # Get profiling data\n",
-        "        profiling_data = vlm.get_profiling_data()\n",
-        "        if profiling_data:\n",
-        "            print(f\"\\nProfiling data: {profiling_data}\")\n",
+        "        if result and hasattr(result, \"profile_data\") and result.profile_data:\n",
+        "            print(f\"\\n{result.profile_data}\")\n",
         "\n",
         "        # Add assistant response to conversation history\n",
-        "        conversation.append(MultiModalMessage(role=\"assistant\",\n",
-        "                                              content=[MultiModalMessageContent(type=\"text\", text=response_buffer.getvalue())]))\n",
+        "        conversation.append(\n",
+        "            VlmChatMessage(\n",
+        "                role=\"assistant\",\n",
+        "                contents=[\n",
+        "                    VlmContent(type=\"text\", text=response_buffer.getvalue())\n",
+        "                ]\n",
+        "            )\n",
+        "        )\n",
         "        print(\"\\n\" + \"=\" * 50)\n",
         "\n",
         "\n",
@@ -316,9 +346,8 @@
       "outputs": [],
       "source": [
         "import numpy as np\n",
-        "from nexaai.embedder import Embedder, EmbeddingConfig\n",
-        "\n",
-        "# Embedder Inference Example\n",
+        "import os\n",
+        "from nexaai.embedding import Embedder\n",
         "\n",
         "\n",
         "def embedder_example():\n",
@@ -338,17 +367,17 @@
         "    print(f\"Batch size: {batch_size}\")\n",
         "\n",
         "    # Create embedder instance\n",
-        "    embedder = Embedder.from_(name_or_path=model_name, plugin_id=plugin_id)\n",
+        "    embedder = Embedder.from_(model=model_name, plugin_id=plugin_id)\n",
         "    print('Embedder loaded successfully!')\n",
         "\n",
         "    # Get embedding dimension\n",
-        "    dim = embedder.get_embedding_dim()\n",
-        "    print(f\"Embedding dimension: {dim}\")\n",
+        "    dim = embedder.embedding_dim()\n",
+        "    print(f\"Dimension: {dim}\")\n",
         "\n",
         "    # Example texts\n",
         "    texts = [\n",
         "        \"On-device AI is a type of AI that is processed on the device itself, rather than in the cloud.\",\n",
-        "        \"Nexa AI allows you to run state-of-the-art AI models locally on CPU, GPU, or NPU.\",\n",
+        "        \"Nexa AI allows you to run state-of-the-art AI models locally on CPU, GPU, or NPU — from instant use cases to production deployments.\",\n",
         "        \"A ragdoll is a breed of cat that is known for its long, flowing hair and gentle personality.\",\n",
         "        \"The capital of France is Paris.\",\n",
         "        \"NPU acceleration provides significant performance improvements for AI workloads.\"\n",
@@ -360,10 +389,11 @@
         "    print(f\"Processing {len(texts)} texts...\")\n",
         "\n",
         "    # Generate embeddings\n",
-        "    embeddings = embedder.generate(\n",
+        "    result = embedder.embed(\n",
         "        texts=texts,\n",
-        "        config=EmbeddingConfig(batch_size=batch_size)\n",
+        "        batch_size=batch_size,\n",
         "    )\n",
+        "    embeddings = result.embeddings\n",
         "\n",
         "    print(f\"Successfully generated {len(embeddings)} embeddings\")\n",
         "\n",
@@ -372,7 +402,7 @@
         "    for i, (text, embedding) in enumerate(zip(texts, embeddings)):\n",
         "        print(f\"\\nText {i + 1}:\")\n",
         "        print(f\"  Content: {text}\")\n",
-        "        print(f\"  Embedding dimension: {len(embedding)}\")\n",
+        "        print(f\"  Embedding shape: {len(embedding)} dimensions\")\n",
         "        print(f\"  First 10 elements: {embedding[:10]}\")\n",
         "        print(\"-\" * 70)\n",
         "\n",
@@ -380,21 +410,20 @@
         "    print(f\"\\n=== Query Processing ===\")\n",
         "    print(f\"Query: '{query}'\")\n",
         "\n",
-        "    query_embedding = embedder.generate(\n",
+        "    query_result = embedder.embed(\n",
         "        texts=[query],\n",
-        "        config=EmbeddingConfig(batch_size=1)\n",
-        "    )[0]\n",
+        "        batch_size=1,\n",
+        "    )\n",
+        "    query_embedding = query_result.embeddings[0]\n",
         "\n",
-        "    print(f\"Query embedding dimension: {len(query_embedding)}\")\n",
+        "    print(f\"Query embedding shape: {len(query_embedding)} dimensions\")\n",
         "\n",
         "    # Similarity analysis\n",
         "    print(f\"\\n=== Similarity Analysis (Inner Product) ===\")\n",
         "    similarities = []\n",
         "\n",
         "    for i, (text, embedding) in enumerate(zip(texts, embeddings)):\n",
-        "        query_vec = np.array(query_embedding)\n",
-        "        text_vec = np.array(embedding)\n",
-        "        inner_product = np.dot(query_vec, text_vec)\n",
+        "        inner_product = sum(a * b for a, b in zip(query_embedding, embedding))\n",
         "        similarities.append((i, text, inner_product))\n",
         "\n",
         "        print(f\"\\nText {i + 1}:\")\n",
@@ -433,7 +462,7 @@
         "import os\n",
         "import time\n",
         "\n",
-        "from nexaai.asr import ASR, ASRConfig\n",
+        "from nexaai.asr import ASR\n",
         "\n",
         "\n",
         "def asr_example():\n",
@@ -452,34 +481,29 @@
         "    print(f\"Loading model: {model_name}\")\n",
         "    print(f\"Using plugin: {plugin_id}\")\n",
         "\n",
-        "    assert os.path.exists(\n",
-        "        audio_file), f\"ERROR: The specified audio_file ('{audio_file}') does not exist. Please provide a valid audio file path to test ASR functionality.\"\n",
+        "    audio_path = os.path.expanduser(audio_file)\n",
+        "\n",
+        "    if not os.path.exists(audio_path):\n",
+        "        raise FileNotFoundError(f\"Audio file not found: {audio_path}\")\n",
         "\n",
         "    # Create ASR instance\n",
-        "    asr = ASR.from_(name_or_path=model_name, plugin_id=plugin_id)\n",
-        "    print('ASR model loaded successfully!')\n",
-        "\n",
-        "    print(f\"\\nNote: Please update the audio_file path to point to your audio file\")\n",
-        "    print(f\"Current audio_file: {audio_file}\")\n",
-        "\n",
-        "    # Check if audio file exists\n",
-        "    if not os.path.exists(audio_file):\n",
-        "        print(f\"Error: Audio file not found: {audio_file}\")\n",
-        "        print(\"Please provide a valid audio file path to test ASR functionality.\")\n",
-        "        return None\n",
-        "\n",
-        "    # Basic ASR configuration\n",
-        "    config = ASRConfig(\n",
-        "        timestamps=\"segment\",  # Get segment-level timestamps\n",
-        "        beam_size=5,\n",
-        "        stream=False\n",
+        "    asr = ASR.from_(\n",
+        "        model=os.path.expanduser(model_name),\n",
+        "        plugin_id=plugin_id,\n",
+        "        device_id=None,\n",
         "    )\n",
+        "    print('ASR model loaded successfully!')\n",
         "\n",
         "    print(f\"\\n=== Starting Transcription ===\")\n",
         "    start_time = time.time()\n",
         "\n",
         "    # Perform transcription\n",
-        "    result = asr.transcribe(audio_path=audio_file, language=\"en\", config=config)\n",
+        "    result = asr.transcribe(\n",
+        "        audio_path=audio_path,\n",
+        "        language=\"en\",\n",
+        "        timestamps=\"segment\",\n",
+        "        beam_size=5,\n",
+        "    )\n",
         "\n",
         "    end_time = time.time()\n",
         "    transcription_time = end_time - start_time\n",
@@ -488,22 +512,6 @@
         "    print(f\"\\n=== Transcription Results ===\")\n",
         "    print(f\"Transcription: {result.transcript}\")\n",
         "    print(f\"Processing time: {transcription_time:.2f} seconds\")\n",
-        "\n",
-        "    # Display segment information if available\n",
-        "    if hasattr(result, 'segments') and result.segments:\n",
-        "        print(f\"\\nSegments ({len(result.segments)}):\")\n",
-        "        for i, segment in enumerate(result.segments[:3]):  # Show first 3 segments\n",
-        "            start_time = segment.get('start', 'N/A')\n",
-        "            end_time = segment.get('end', 'N/A')\n",
-        "            text = segment.get('text', '').strip()\n",
-        "            print(f\"  {i +1}. [{start_time:.2f}s - {end_time:.2f}s] {text}\")\n",
-        "        if len(result.segments) > 3:\n",
-        "            print(f\"  ... and {len(result.segments) - 3} more segments\")\n",
-        "\n",
-        "    # Get profiling data\n",
-        "    profiling_data = asr.get_profiling_data()\n",
-        "    if profiling_data:\n",
-        "        print(f\"\\nProfiling data: {profiling_data}\")\n",
         "\n",
         "    return result\n",
         "\n",
@@ -526,7 +534,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from nexaai.rerank import Reranker, RerankConfig\n",
+        "import os\n",
+        "from nexaai.rerank import Reranker\n",
         "\n",
         "\n",
         "def reranker_example():\n",
@@ -546,8 +555,10 @@
         "    print(f\"Batch size: {batch_size}\")\n",
         "\n",
         "    # Create reranker instance\n",
-        "    reranker = Reranker.from_(name_or_path=model_name, plugin_id=plugin_id)\n",
-        "    print('Reranker loaded successfully!')\n",
+        "    reranker = Reranker.from_(\n",
+        "        model=os.path.expanduser(model_name),\n",
+        "        plugin_id=plugin_id,\n",
+        "    )\n",
         "\n",
         "    # Example queries and documents\n",
         "    queries = [\n",
@@ -578,11 +589,12 @@
         "        print(\"-\" * 50)\n",
         "\n",
         "        # Perform reranking\n",
-        "        scores = reranker.rerank(\n",
+        "        result = reranker.rerank(\n",
         "            query=query,\n",
         "            documents=documents,\n",
-        "            config=RerankConfig(batch_size=batch_size)\n",
+        "            batch_size=batch_size,\n",
         "        )\n",
+        "        scores = result.scores\n",
         "\n",
         "        # Create (document, score) pairs and sort\n",
         "        doc_scores = list(zip(documents, scores))\n",
@@ -622,24 +634,32 @@
       "outputs": [],
       "source": [
         "import os\n",
-        "from nexaai.cv import CVCapabilities, CVModel, CVModelConfig, CVResults\n",
+        "from nexaai.cv import CV\n",
         "\n",
         "\n",
         "def cv_ocr_example():\n",
+        "    \"\"\"CV OCR example\"\"\"\n",
+        "    print(\"=== CV OCR Example ===\")\n",
         "\n",
         "    # Use huggingface repo ID\n",
         "    model_name = \"NexaAI/paddle-ocr-mlx\"\n",
         "\n",
         "    image_path = r\"path/to/image\"\n",
         "\n",
-        "    config = CVModelConfig(capabilities=CVCapabilities.OCR)\n",
-        "    cv = CVModel.from_(name_or_path=model_name, config=config, plugin_id='mlx')\n",
+        "    image_path = os.path.expanduser(image_path)\n",
         "\n",
-        "    assert os.path.exists(image_path), f\"ERROR: Image file not found: {image_path}\"\n",
+        "    if not os.path.exists(image_path):\n",
+        "        raise FileNotFoundError(f\"Image file not found: {image_path}\")\n",
+        "\n",
+        "    cv = CV.from_(\n",
+        "        model=os.path.expanduser(model_name),\n",
+        "        capabilities=0,  # 0=OCR\n",
+        "        plugin_id='mlx',\n",
+        "    )\n",
         "\n",
         "    results = cv.infer(image_path)\n",
         "\n",
-        "    print(f\"Number of results: {results.result_count}\")\n",
+        "    print(f\"Number of results: {len(results.results)}\")\n",
         "    for result in results.results:\n",
         "        print(f\"[{result.confidence:.2f}] {result.text}\")\n",
         "\n",
