--- a/bindings/android/app/src/main/res/values/strings.xml
+++ b/bindings/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
+<!--
+  Copyright 2024-2026 Nexa AI, Inc.
+
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+-->
 <resources>
     <string name="app_name">NexaDemo</string>
     <string name="blank_index_tip">Please import files before starting your search.</string>
